# ESOExplorer

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
Assets/: CMakeLists.txt  ESOLikeMaterial.mat  ESOLikeMaterialCommon.hmat  ESOLikeMaterialMasked.mat  ESOLikeMaterialOpaque.mat  ESOLikeMaterialTransparent.mat  FilenameHarvesting.dir  Filesystem.dir  SupportedVersions.dir  UISettings.dir
Assets/Database/Defs/: AbilityDef.dir  AbilityListDef.dir  AbilityProgressionLineDef.dir  AbilityRankDeltaDef.dir  AbilityStickDef.dir  AccentTintProgressionDef.dir  AccountTypeDef.dir  AchievementCategoryDef.dir  AchievementDef.dir  ActiveCombatTipDef.dir  ActivityFeedDef.dir  ActorRandomStringTableDef.dir  AllianceDef.dir  AmbienceDef.dir  AnchorObjectDef.dir  AnimListDef.dir  AnimListTypeDef.dir  AnimNameOverrideListDef.dir  AnimSetDef.dir  AppearanceDef.dir  AreaOfOperationsDef.dir  BattleGroundDef.dir  BattleStandardDef.dir  BiomeDef.dir  BoneCapsuleSetDef.dir  BoneSetDef.dir  BookCollectionCategoryDef.dir  BookCollectionDef.dir  BookDef.dir  CampaignDef.dir  CampaignRulesetDef.dir  ChapterUpgradeDef.dir  ChapterUpgradeLinksDef.dir  CharacterAimingDef.dir  CharacterSliderDef.dir  CharacterTemplateDef.dir  ClassDef.dir  ClickableDef.dir  ClientTriggeredTrapDef.dir  CollectibleAppearanceDef.dir  (+350 more)
Assets/Database/Enums/: AbilityRankDeltaType.dir  AbilityType.dir  AbilityUseEquipSlot.dir  ActiveCombatTipCondition.dir  ActiveCombatTipTarget.dir  Alliance.dir  AssetCategory.dir  AttachmentBone.dir  AudioGenericVORaceList.dir  Bag.dir  BattlegroundGameType.dir  BodyLocation.dir  BonusCategory.dir  BookMedium.dir  BuffType.dir  CharacterAppearanceName.dir  CharacterSliderName.dir  ClickableFlavorType.dir  ClientLocTags.dir  ClientObjectStateChangeEvents.dir  CollectibleCategoryType.dir  CombatMechanicType.dir  ConsoleEventType.dir  CrimeEvent.dir  CrownCrateEvent.dir  CurrencyType.dir  DamageType.dir  DeathRecapHintType.dir  DeformationCharacter.dir  DerivedStats.dir  DyeHueCategory.dir  EffectLinkType.dir  EmoteCategory.dir  EnchantingRuneType.dir  EnchantmentSearchCategoryType.dir  EquipType.dir  FXCullingBehavior.dir  FurnitureSlot.dir  FurnitureThemeType.dir  FxAnimLoopFinishActivation.dir  (+71 more)
Assets/Database/Structs/: BaseDef.dir  CpStr.dir  FxStopInfo.dir  ItemVisualData.dir  ItemVisualDataShort.dir  LootCrateParticleInfo.dir  QuestAssist.dir  StateEntry.dir  VoCpStr.dir
CMake/: Findfilament.cmake
DirectXTex/: CMakeLists.txt
ESOBrowser/: BinaryFileViewWidget.cpp  BinaryFileViewWidget.h  CMakeLists.txt  DDSFileViewWidget.cpp  DDSFileViewWidget.h  DDSTexture.cpp  DDSTexture.h  DataStorage.cpp  DataStorage.h  DatabaseBrowserWidget.cpp  DatabaseBrowserWidget.h  DatabaseBrowserWidget.ui  DatabaseDirectiveFile.cpp  DatabaseDirectiveFile.h  DatabaseRecordViewerItemDelegate.cpp  DatabaseRecordViewerItemDelegate.h  DatabaseRecordViewerWidget.cpp  DatabaseRecordViewerWidget.h  DatabaseRecordViewerWidget.ui  DefSearchWidget.cpp  DefSearchWidget.h  DefSearchWidget.ui  DirectiveFile.cpp  DirectiveFile.h  DummyTabWidget.cpp  DummyTabWidget.h  DummyTabWidget.ui  ESOBrowserMainWindow.cpp  ESOBrowserMainWindow.h  ESOBrowserMainWindow.ui  ESOBrowserSelectDepotDialog.cpp  ESOBrowserSelectDepotDialog.h  ESOBrowserSelectDepotDialog.ui  ESODatabase.cpp  ESODatabase.h  ESODatabaseDef.cpp  ESODatabaseDef.h  ESODatabaseDefModel.cpp  ESODatabaseDefModel.h  ESODatabaseModel.cpp  (+58 more)
granny2/: CMakeLists.txt  granny.def
